# Comfyui-VACE-Tools

./: LICENSE  README.md  __init__.py  latent_node.py  logic.json  merge_node.py  mode_select_node.py  nodes.py  pyproject.toml  save_node.py
example_workflows/: simple-vace-extend-model.json
web/js/: vace_widgets.js
