[project]
name = "comfyui-vace-tools"
version = "1.1.3"
description = "Mask and control-frame generation nodes for WanVideo/VACE workflows — supports 11 generation modes, source trimming, and merge-back with optical flow blending."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/ethanfel/Comfyui-VACE-Tools"

[tool.comfy]
PublisherId = "ethanfel"
DisplayName = "VACE Tools"
Icon = ""
